fdo#61428: SwTxtNode::ReplaceText: brown paperbag fix

Fix the optimization to return only if both replacement and replaced
strings are empty.
(regression from b6d45f26ea5bcc848737921b59a16253eb1d8587)

Change-Id: I984fb151a5ac3e6eb8d03f854ad6a3df88f96000